Added base home page html and also basic css to call to action section

--- a/index.html
+++ b/index.html
@@ -4,4 +4,97 @@ layout: main
 order: 1
 icon: fa-home
 ---
-<h1>Home</h1>
+<section class="cta">
+    <p>Enjoy our Number 1 reviews and stay tuned with our blog</p>
+    <p>Trust us, we like movies just like you</p>
+    <div class="buttons">
+        <a href="/films/">Read Our Reviews</a>
+        <a href="/blog/">Visit Our Blog</a>
+    </div>
+</section>
+
+<section class="our-team">
+    <h2>Our Team</h2>
+    <p>We are people with taste</p>
+    <ul>
+        <li>
+            <div class="member">
+                <div class="media">
+                    <img src="/images/members/johnSmith.jpg" alt="phot of site memeber John Smith">
+                </div>
+                <h4>John Smith</h4>
+                <p>A Film lover and our review writer.</p>
+            </div>
+        </li>
+        <li>
+            <div class="member">
+                <div class="media">
+                    <img src="/images/members/kaylaPeers.jpg" alt="photo of Kayla Peers">
+                </div>
+                <h4>Kayla Peers</h4>
+                <p>Our blog posts writer with great sense of humour.</p>
+            </div>
+        </li>
+        <li>
+            <div class="member">
+                <div class="media">
+                    <img src="/images/members/kostadinKostadinov.jpg" alt="photo of Kostadin Kostadinov">
+                </div>
+                <h4>Kostadin Kostadinov</h4>
+                <p>Our Developer and also a review writer.</p>
+            </div>
+        </li>
+        <li>
+            <div class="member">
+                <div class="media">
+                    <img src="/images/members/robertWilson.jpg" alt="photo of Robert Wilson">
+                </div>
+                <h4>Robert Wilson</h4>
+                <p>Our blog posts writer.</p>
+            </div>
+        </li>
+    </ul>
+</section>
+
+<section class="newsletter">
+    <h2>Sign-up to our newsletter</h2>
+    <form action="#">
+        <p>
+            <input type="email" name='email' id="email">
+            <input type="submit" value="Sign Up">
+        </p>
+    </form>
+</section>
+
+<section class="reviews-about-us">
+    <h2>Reviews about us</h2>
+    <ul>
+        <li>
+            <div class="testimonial">
+                <div class="media">
+                    <img src="/images/testimonials/ryanGreen.jpg" alt="photo of testimonial Ryan Green">
+                </div>
+                <h4>Ryan Green</h4>
+                <p>I love their reviews, so accurate and good written.</p>
+            </div>
+        </li>
+        <li>
+            <div class="testimonial">
+                <div class="media">
+                    <img src="/images/testimonials/MilaAniston.jpg" alt="photo of testimonial Mila Aniston">
+                </div>
+                <h4>Mila Aniston</h4>
+                <p>I really like the website and how intuitive it is.</p>
+            </div>
+        </li>
+        <li>
+            <div class="testimonial">
+                <div class="media">
+                    <img src="/images/testimonials/victoriaIvy.jpg" alt="photo of testimonial Victoria Ivy">
+                </div>
+                <h4>Victoria Ivy</h4>
+                <p>Their blog posts are awesome.</p>
+            </div>
+        </li>
+    </ul>
+</section>
