Finished the about page

--- a/about.html
+++ b/about.html
@@ -5,5 +5,70 @@ order: 2
 icon: fa-id-card-alt
 permalink: /about/
 ---
-
-<h1>About</h1>
+<section class="about-filmRater">
+    <h2>About Us</h2>
+    <h3>We are a small group of enthusiasts driven by our movies passion and our laziness of doing nothing except watching films. In 2019 we develop this site to be a modern and independent source for film reviews and all kind of news about cinema and movies.</h3>
+</section>
+<section class="about">
+    <section class="about-person" id="john">
+        <div class="content">
+            <h2>John Smith</h2>
+            <ul>
+                <li><span>Age:</span> 32</li>
+                <li><span>Location:</span> Los Angeles, California, USA</li>
+                <li><span>Hobbies:</span> Going out with friends and drinking beer</li>
+                <li><span>Profession:</span> Writer</li>
+                <li><span>Favorite Film: </span> Shawshank Redemption</li>
+            </ul>
+        </div>
+        <div class="media">
+            <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80" alt="photo of John Smith">
+        </div>
+    </section>
+    <section class="about-person" id="kayla">
+        <div class="media">
+            <img src="https://images.unsplash.com/photo-1543093379-05bb4c1c85a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80" alt="photo of Kayla Peers">
+        </div>
+        <div class="content">
+            <h2>Kayla Peers</h2>
+            <ul>
+                <li><span>Age:</span> 22</li>
+                <li><span>Location:</span> Los Angeles, California, USA</li>
+                <li><span>Hobbies:</span> Writing novels and playing tennis</li>
+                <li><span>Profession:</span> Student</li>
+                <li><span>Favorite Film: </span> The Godfather</li>
+            </ul>
+        </div>
+       
+    </section>
+    <section class="about-person" id="victoria">
+        <div class="content">
+            <h2>Victoria Jennson</h2>
+            <ul>
+                <li><span>Age:</span> 26</li>
+                <li><span>Location:</span> Los Angeles, California, USA</li>
+                <li><span>Hobbies:</span> Singing and writing</li>
+                <li><span>Profession:</span> Singer</li>
+                <li><span>Favorite Film: </span> One Flew Over the Cuckoo's Nest</li>
+            </ul>
+        </div>
+        <div class="media">
+            <img src="https://images.unsplash.com/photo-1464863979621-258859e62245?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80" alt="photo of Victoria Jennson">
+        </div>
+    </section>
+    <section class="about-person" id="robert">
+        <div class="media">
+            <img src="https://images.unsplash.com/photo-1531860494978-9326a0388ef4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80" alt="photo of Robert Wilson">
+        </div>
+        <div class="content">
+            <h2>Robert Wilson</h2>
+            <ul>
+                <li><span>Age:</span> 24</li>
+                <li><span>Location:</span> Los Angeles, California, USA</li>
+                <li><span>Hobbies:</span> Aikido and Writing</li>
+                <li><span>Profession:</span> Aikido instructor</li>
+                <li><span>Favorite Film: </span> Star Wars: Episode IV - A New Hope</li>
+            </ul>
+        </div>
+    </section>
+</section>
