--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ icon: fa-home
         <li>
             <div class="member">
                 <div class="media">
-                    <a href="#">
+                    <a href="/about/#john">
                         <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80" alt="phot of site memeber John Smith">
                     </a>
                     <div class="info">
@@ -34,7 +34,7 @@ icon: fa-home
         <li>
             <div class="member">
                 <div class="media">
-                    <a href="#">
+                    <a href="/about/#kayla">
                         <img src="https://images.unsplash.com/photo-1543093379-05bb4c1c85a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80" alt="photo of Kayla Peers">
                     </a>
                     <div class="info">
@@ -47,7 +47,7 @@ icon: fa-home
         <li>
             <div class="member">
                 <div class="media">
-                    <a href="#">
+                    <a href="/about#victoria">
                         <img src="https://images.unsplash.com/photo-1464863979621-258859e62245?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80" alt="photo of Victoria Jennson">
                     </a>
                     <div class="info">
@@ -60,7 +60,7 @@ icon: fa-home
         <li>
             <div class="member">
                 <div class="media">
-                    <a href="#">
+                    <a href="/about#robert">
                         <img src="https://images.unsplash.com/photo-1531860494978-9326a0388ef4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80" alt="photo of Robert Wilson">
                     </a>
                     <div class="info">
