--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ icon: fa-home
     <p>Enjoy our Number 1 reviews and stay tuned with our blog</p>
     <p>Trust us, we like movies just like you</p>
     <div class="buttons">
-        <a href="/films/">Read Our Reviews</a>
-        <a href="/blog/">Visit Our Blog</a>
+        <a href="{{ site.baseurl }}/films/">Read Our Reviews</a>
+        <a href="{{ site.baseurl }}/blog/">Visit Our Blog</a>
     </div>
 </section>
 
@@ -20,7 +20,7 @@ icon: fa-home
         <li>
             <div class="member">
                 <div class="media">
-                    <a href="/about/#john">
+                    <a href="{{ site.baseurl }}/about/#john">
                         <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80" alt="phot of site memeber John Smith">
                     </a>
                     <div class="info">
@@ -34,7 +34,7 @@ icon: fa-home
         <li>
             <div class="member">
                 <div class="media">
-                    <a href="/about/#kayla">
+                    <a href="{{ site.baseurl }}/about/#kayla">
                         <img src="https://images.unsplash.com/photo-1543093379-05bb4c1c85a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80" alt="photo of Kayla Peers">
                     </a>
                     <div class="info">
@@ -47,7 +47,7 @@ icon: fa-home
         <li>
             <div class="member">
                 <div class="media">
-                    <a href="/about#victoria">
+                    <a href="{{ site.baseurl }}/about#victoria">
                         <img src="https://images.unsplash.com/photo-1464863979621-258859e62245?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80" alt="photo of Victoria Jennson">
                     </a>
                     <div class="info">
@@ -60,7 +60,7 @@ icon: fa-home
         <li>
             <div class="member">
                 <div class="media">
-                    <a href="/about#robert">
+                    <a href="{{ site.baseurl }}/about#robert">
                         <img src="https://images.unsplash.com/photo-1531860494978-9326a0388ef4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80" alt="photo of Robert Wilson">
                     </a>
                     <div class="info">
