--- a/films.html
+++ b/films.html
@@ -6,4 +6,18 @@ icon: fa-video
 permalink: /films/
 ---
 
-<h1>Films</h1>
+<section class="film-genres">
+    <h2>Genres</h2>
+
+    <div class="content">
+        <ul class="genres">
+            {% for page in site.pages %}
+            {% if page.film-genre %}
+            <li>
+                <a href="{{ site.baseurl }}{{ page.permalink }}" class="genre">{{ page.film-genre }}</a>
+            </li>
+            {% endif %}
+            {% endfor %}
+        </ul>
+    </div>
+</section>
