Renamed Films folder to reviews

--- a/reviews.html
+++ b/reviews.html
@@ -1,9 +1,9 @@
 ---
 layout: main
-title: Films
+title: reviews
 order: 3
 icon: fa-video
-permalink: /Films/
+permalink: /reviews/
 ---
 
 <section class="film-genres">
