Renamed again to films i hope for last time

--- a/films.html
+++ b/films.html
@@ -1,9 +1,9 @@
 ---
 layout: main
-title: reviews
+title: Films
 order: 3
 icon: fa-video
-permalink: /reviews/
+permalink: /films/
 ---
 
 <section class="film-genres">
