--- a/films/action/terminator.html
+++ b/films/action/terminator.html
@@ -1,8 +1,16 @@
 ---
 layout: main
-film-title: Terminator 
+film-title: The Terminator 
 genre: Action
 permalink: /films/action/terminator/
+image: https://cdn.shopify.com/s/files/1/1416/8662/products/terminator_1984_french_original_film_art_a_2000x.jpg?v=1551807845
+duration: 107min
+director: James Cameron
+stars: Arnold Schwarzenegger, Linda Hamilton, Michael Biehn
+resume: A seemingly indestructible robot is sent from 2029 to 1984 to assassinate a young waitress, whose unborn son will lead humanity in a war against sentient machines, while a human soldier from the same war is sent to protect her at all costs.
+year: 1985
+trailer: https://www.youtube.com/watch?v=k64P4l2Wmeg
+rating: 7
 ---
 
 <h1>Terminator</h1>
