Format all *.html files and also add head.html

--- a/index.html
+++ b/index.html
@@ -21,21 +21,23 @@ icon: fa-home
             <div class="member">
                 <div class="media">
                     <a href="{{ site.baseurl }}/about/#john">
-                        <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80" alt="phot of site memeber John Smith">
+                        <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80"
+                            alt="phot of site memeber John Smith">
                     </a>
                     <div class="info">
                         <h4>John Smith</h4>
                         <p>A Film lover and our review writer.</p>
                     </div>
                 </div>
-                
+
             </div>
         </li>
         <li>
             <div class="member">
                 <div class="media">
                     <a href="{{ site.baseurl }}/about/#kayla">
-                        <img src="https://images.unsplash.com/photo-1543093379-05bb4c1c85a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80" alt="photo of Kayla Peers">
+                        <img src="https://images.unsplash.com/photo-1543093379-05bb4c1c85a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80"
+                            alt="photo of Kayla Peers">
                     </a>
                     <div class="info">
                         <h4>Kayla Peers</h4>
@@ -48,7 +50,8 @@ icon: fa-home
             <div class="member">
                 <div class="media">
                     <a href="{{ site.baseurl }}/about#victoria">
-                        <img src="https://images.unsplash.com/photo-1464863979621-258859e62245?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80" alt="photo of Victoria Jennson">
+                        <img src="https://images.unsplash.com/photo-1464863979621-258859e62245?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80"
+                            alt="photo of Victoria Jennson">
                     </a>
                     <div class="info">
                         <h4>Victoria Jennson</h4>
@@ -61,7 +64,8 @@ icon: fa-home
             <div class="member">
                 <div class="media">
                     <a href="{{ site.baseurl }}/about#robert">
-                        <img src="https://images.unsplash.com/photo-1531860494978-9326a0388ef4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80" alt="photo of Robert Wilson">
+                        <img src="https://images.unsplash.com/photo-1531860494978-9326a0388ef4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80"
+                            alt="photo of Robert Wilson">
                     </a>
                     <div class="info">
                         <h4>Robert Wilson</h4>
@@ -90,7 +94,8 @@ icon: fa-home
         <li>
             <div class="testimonial">
                 <div class="media">
-                    <img src="https://images.unsplash.com/photo-1501325087108-ae3ee3fad52f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80" alt="photo of testimonial Ryan Green">
+                    <img src="https://images.unsplash.com/photo-1501325087108-ae3ee3fad52f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80"
+                        alt="photo of testimonial Ryan Green">
                 </div>
                 <h4>Ryan Green</h4>
                 <p>I love their reviews, so accurate and good written.</p>
@@ -99,7 +104,8 @@ icon: fa-home
         <li>
             <div class="testimonial">
                 <div class="media">
-                    <img src="https://images.unsplash.com/photo-1522556189639-b150ed9c4330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80" alt="photo of testimonial Jayme Jackson">
+                    <img src="https://images.unsplash.com/photo-1522556189639-b150ed9c4330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80"
+                        alt="photo of testimonial Jayme Jackson">
                 </div>
                 <h4>Jayme Jackson</h4>
                 <p>I really like the website and how intuitive it is.</p>
@@ -108,7 +114,8 @@ icon: fa-home
         <li>
             <div class="testimonial">
                 <div class="media">
-                    <img src="https://images.unsplash.com/photo-1525450217028-ba09e159aac6?ixlib=rb-1.2.1&auto=format&fit=crop&w=350&q=80" alt="photo of testimonial Victoria Ivy">
+                    <img src="https://images.unsplash.com/photo-1525450217028-ba09e159aac6?ixlib=rb-1.2.1&auto=format&fit=crop&w=350&q=80"
+                        alt="photo of testimonial Victoria Ivy">
                 </div>
                 <h4>Victoria Ivy</h4>
                 <p>Their blog posts are awesome.</p>
