--- a/about.html
+++ b/about.html
@@ -7,7 +7,9 @@ permalink: /about/
 ---
 <section class="about-filmRater">
     <h2>About Us</h2>
-    <h3>We are a small group of enthusiasts driven by our movies passion and our laziness of doing nothing except watching films. In 2019 we developed this site to be a modern and independent source for film reviews and all kind of news about cinema and movies.</h3>
+    <h3>We are a small group of enthusiasts driven by our movies passion and our laziness of doing nothing except
+        watching films. In 2019 we developed this site to be a modern and independent source for film reviews and all
+        kind of news about cinema and movies.</h3>
 </section>
 <section class="about">
     <section class="about-person" id="john">
@@ -22,12 +24,14 @@ permalink: /about/
             </ul>
         </div>
         <div class="media">
-            <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80" alt="photo of John Smith">
+            <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80"
+                alt="photo of John Smith">
         </div>
     </section>
     <section class="about-person" id="kayla">
         <div class="media">
-            <img src="https://images.unsplash.com/photo-1543093379-05bb4c1c85a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80" alt="photo of Kayla Peers">
+            <img src="https://images.unsplash.com/photo-1543093379-05bb4c1c85a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80"
+                alt="photo of Kayla Peers">
         </div>
         <div class="content">
             <h2>Kayla Peers</h2>
@@ -39,7 +43,7 @@ permalink: /about/
                 <li><span>Favorite Film: </span> The Godfather</li>
             </ul>
         </div>
-       
+
     </section>
     <section class="about-person" id="victoria">
         <div class="content">
@@ -53,12 +57,14 @@ permalink: /about/
             </ul>
         </div>
         <div class="media">
-            <img src="https://images.unsplash.com/photo-1464863979621-258859e62245?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80" alt="photo of Victoria Jennson">
+            <img src="https://images.unsplash.com/photo-1464863979621-258859e62245?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80"
+                alt="photo of Victoria Jennson">
         </div>
     </section>
     <section class="about-person" id="robert">
         <div class="media">
-            <img src="https://images.unsplash.com/photo-1531860494978-9326a0388ef4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80" alt="photo of Robert Wilson">
+            <img src="https://images.unsplash.com/photo-1531860494978-9326a0388ef4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=80"
+                alt="photo of Robert Wilson">
         </div>
         <div class="content">
             <h2>Robert Wilson</h2>
